# BAMPS-ML

./: MIC_predictions.md  README.md  requirements.txt  setup.cfg  setup.py  workflow.md
bamps_ml/: __init__.py  evaluation.py  feature_selection.py  gwas_tools.py  ml_pipeline.py  plotting.py  utils.py
config/: config.yaml
docs/: workflow.md
scripts/: breakpoints.py  merge_features.py  plot_SIR_confusion.py  plot_isolates_map.py  plot_predicted_mic_panel.py  predict.py  predict_all.py  predict_mic.py  run_amrfinder.py  run_bakta.py  run_gene_gwas.py  run_mobsuite.py  run_panaroo.py  run_unitig_gwas.py  setup.py  train_model.py
