[metadata]
name = bamps-ml
version = 0.1.0
author = Ben Pascoe
author_email = benizao@gmail.com
description = BAMPS‑ML: Predict antimicrobial MICs from genotype data
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pandas
    numpy
    scikit-learn
    xgboost
    lightgbm
    catboost
    pyyaml
    shap
python_requires = >=3.8
